# actixserver

./: Cargo.toml  Dockerfile  request.http
src/: main.rs  product_routes.rs
src/products/: errors.rs  mod.rs  product.rs  products_repository.rs
src/routes/: mod.rs  product_routes.rs  user_routes.rs
src/user/: errors.rs  mod.rs  user.rs  user_repository.rs  user_service.rs
src/utils/: mod.rs  password_handler.rs
src/web/: authorization.rs  mod.rs  product_routes.rs  user_routes.rs
