[package]
name = "actixserver"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.141"
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
argon2 = { version = "0.5.3"}
password-hash = { version = "0.5", features = ["rand_core", "getrandom"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.17.0"